--- a/src/styles/news.css
+++ b/src/styles/news.css
@@ -38,13 +38,8 @@ a {
 
 
 
-.bohemian_image {
-    border-radius: 25px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 75%;
-    height: 75%;
+html {
+    background-color: #092252;
 }
 
 h1 {
@@ -53,20 +48,21 @@ h1 {
     margin-bottom: 75px;
 }
 
+h3 {
+    display: flex;
+    justify-content: center;
+}
+
 body {
     color: #dbb64c;
 }
 
-html {
-    background-color: #092252;
-}
-
-.trailer {
+iframe {
     border-radius: 25px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
 
 .tour_image {
@@ -78,17 +74,45 @@ html {
     height: 75%;
 }
 
+
+.bohemian_image {
+    border-radius: 25px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+    height: 75%;
+}
+
+.benefit_image {
+    border-radius: 25px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+    height: 75%;
+}
+
 .movie {
     border-bottom: 5px solid #dbb64c;
-    margin-bottom: 75px;
+    margin-bottom: 50px;
    
 }
 
 .tour {
+    border-bottom: 5px solid #dbb64c;
     margin-bottom: 50px;
 }
 
-h3 {
-    display: flex;
-    justify-content: center;
+.benefit {
+    margin-bottom: 50px;
 }
+
+p {
+    color:  rgb(150, 142, 253);
+}
+
+.dates {
+    color: lime;
+}
+
