--- a/src/styles/career.css
+++ b/src/styles/career.css
@@ -8,7 +8,7 @@
     flex-direction: row;
     justify-content: space-around; 
     font-family: 'Times New Roman', Times, serif;
-    border-bottom: 5px solid black;
+    border-bottom: 3px solid black;
     background-color: #dbb64c;
     align-items: center;
     
@@ -46,9 +46,10 @@ a {
     color: black;
     /* Putting a border bottom on each section to 
     visually differentiate sections when starting */
-    border-bottom: 5px solid black;
+    border-bottom: 3px solid black;
     font-family: 'Times New Roman', Times, serif;
     color: rgb(150, 142, 253);
+    text-shadow: 1px 0px 2px black;
 }
 .freddie_headshot {
     display: flex;
@@ -64,30 +65,35 @@ a {
     color:  #dbb64c;
     font-family: 'Times New Roman', Times, serif;
     padding-bottom: 35px;
+    text-shadow: 1px 0px 2px black;
 }
 .freddie_quote {
     display: flex;
     align-items: center;
+    text-shadow: 1px 0px 2px black;
 }
 /* Section 2, Skills & Talents */
 .skills_section {
     display: flex;
     color: rgb(150, 142, 253);
     flex-direction: column;
-    border-bottom: 5px solid black;
+    border-bottom: 3px solid black;
     font-family: 'Times New Roman', Times, serif;
+    text-shadow: 1px 0px 2px black;
 }
 .skills_title {
     display: flex;
     justify-content: center;
     font-family: 'Times New Roman', Times, serif;
     color:  #dbb64c;
+    text-shadow: 1px 0px 2px black;
 }
 /* Section 3, Published Work */
 .published_section {
     font-family: 'Times New Roman', Times, serif;
     color: rgb(150, 142, 253);
-    border-bottom: 5px solid black;
+    border-bottom: 3px solid black;
+    text-shadow: 1px 0px 2px black;
 
 }
 .published_title {
@@ -95,6 +101,7 @@ a {
     justify-content: center;
     color:  #dbb64c;
     font-family: 'Times New Roman', Times, serif;
+    text-shadow: 1px 0px 2px black;
 }
 /* Controls image size */
 .published_imagelist {
@@ -115,50 +122,56 @@ div{
 
 /* Section 4, Collaborators  */
 .collab_section {
-    border-bottom: 5px solid black;
+    border-bottom: 3px solid black;
     font-family: 'Times New Roman', Times, serif;
     color:rgb(150, 142, 253);
+    text-shadow: 1px 0px 2px black;
 }
 .collab_title {
     display: flex;
     justify-content: center;
     color:  #dbb64c;
     font-family: 'Times New Roman', Times, serif;
+    text-shadow: 1px 0px 2px black;
 }
 .collab_sec {
     display: flex;
     padding: 10px;
 }
 .collab_img {
-    flex-basis: 25%;
+    flex-basis: 20%;
     padding: 10px;
 }
 .collab_img img {
     width: 100%;
 }
 .collab_txt {
-    flex-basis: 75%;
+    flex-basis: 80%;
     padding: 10px;
 }
  .collab_txt p {
     width: 100%;
+    display: flex;
+    align-items: center;
 }
 
 
 
 /* Section 5, Awards */
 .awards_section {
-    border-bottom: 5px solid black;
+    border-bottom: 3px solid black;
     font-family: 'Times New Roman', Times, serif;
     color: rgb(150, 142, 253);
     display: flex;
     flex-direction: row;
+    text-shadow: 1px 0px 2px black;
 }
 .awards_title {
     display: flex;
     justify-content: center;
     color:  #dbb64c;
     font-family: 'Times New Roman', Times, serif;
+    text-shadow: 1px 0px 2px black;
 }
 .awards_gif {
     display: flex;
