--- a/src/styles/personal.css
+++ b/src/styles/personal.css
@@ -87,18 +87,16 @@
     display: inline;
     float: right;
     width: 65%;
-    padding: 10px;
-    margin-top: 60px;
+    /* margin-top: 20px; */
     /* align-self: flex-end; */
     /* justify-content: center; */
-    /* border: 1px dotted red; */   
+    /* border: 1px dotted red; */ 
 }
 
-.parents_pic {
+.parent_pic {
     width: 30%;
     height: 30%;
-    margin-top: 0;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
     /* align-self: flex-start; */
     /* justify-content: center; */
     /* border: 1px dotted red; */
